3_arcadia_app/nap/ingress_arcadia_nap.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arcadia-ingress
  namespace: arcadia
  annotations:
    appprotect.f5.com/app-protect-policy: "default/dataguard-blocking"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "default/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.20.6:5144"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - arcadia.example.com
    secretName: default-server-secret-arcadia
  rules:
  - host: arcadia.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 80
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3
            port:
              number: 80
